# SlicerSkinMouldGenerator

./: CMakeLists.txt  LICENSE  README.md
Doc/: SkinMouldGeneratorLogo.xcf
HDRMould/: CMakeLists.txt  HDRMould.py
HDRMould/HDRlib/: CatheterPath.py  HDRMouldTest.py  MouldLogic.py  TestObject.py  Utility.py  __init__.py
